--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "build": "tsc",
     "start": "node dist/bot.js",
     "dev": "ts-node src/bot.ts",
-    "view-history": "ts-node src/viewHistory.ts"
+    "view-history": "ts-node src/viewHistory.ts",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [
     "ethereum",
@@ -26,7 +29,10 @@
   "devDependencies": {
     "@types/node": "^20.10.6",
     "@types/better-sqlite3": "^7.6.8",
+    "@types/jest": "^29.5.11",
     "typescript": "^5.3.3",
-    "ts-node": "^10.9.2"
+    "ts-node": "^10.9.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.1.1"
   }
 }
