feat: add unichain burns

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ RECIPIENT_ADDRESS=0x000000000000000000000000000000000000dEaD
 # For tokens with 18 decimals: 1 token = 1000000000000000000 (1e18)
 # For tokens with 6 decimals (like USDC): 1 token = 1000000 (1e6)
 AMOUNT=4000000000000000000000
+ADDITIONAL_AMOUNTS=2000000000000000000000
 
 # Slack bot token (starts with xoxb-)
 # Get this from https://api.slack.com/apps
